# codecup-box

./: CMakeLists.txt  LICENSE  README.md
src/: AI.h  Box.h  MctsAi.h  Position.cc  Position.h  PositionData.cc  RNG.h  STD.h  TimeManagement.h  main.cc
